Fixed Navbar and Footer Alignment

--- a/modus-ponens/styles/globals.css
+++ b/modus-ponens/styles/globals.css
@@ -10,6 +10,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Manrope', sans-serif;
+  overflow-y: overlay;
 }
 
 a {
